{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player1",
            "id": "df5f056a-c407-4652-9409-8d587a794a5f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "11bac210-694a-45c8-a14d-dbd840fcee90",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skills",
                    "type": "Button",
                    "id": "1cedf04a-9369-4244-9cd2-fd432d54351a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Take",
                    "type": "Button",
                    "id": "5adc40c0-e253-45e9-8e0e-08a866d6a29b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6d3e91b-b671-423d-87a3-d558e316c8e6",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Take",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Horizontal",
                    "id": "3a1c2f45-f8e9-4611-a241-f1537261a518",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "ac327a41-4ffd-4652-8617-6dc005758849",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "26cea32f-9b91-4d61-8022-b86b9a3f6cb2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "a2ed843d-4e9a-4685-a866-ca7eefbbba2f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "289d20ba-3b00-42e2-92fd-aa702fb6cd34",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c56286c1-8ff5-4a68-a194-6db45ae80f83",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skills",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "56cdc462-20a6-4937-b581-9d9360bb6d28",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "55fda6e6-9a5a-4f76-8ec5-23b8c3845f70",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "0c37300c-3e99-48b5-9ea0-343bbc23bb03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Take",
                    "type": "Button",
                    "id": "44b826c8-03e8-4caf-8cf3-a675c904a9a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f06111f9-ffdf-4a98-a417-f83d0c5dc08f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9959f6b-56a9-4ae3-9b24-d7979240ee43",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97bbd3e3-5115-4acd-ad40-b131ddcd1090",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Take",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}